Fix exceptions